cockroachlabs-preview-main/docs/v23.2/set-vars.mdx
---
title: "SET {session variable}"
old_description: "The SET statement modifies the current configuration variables for the client session."
---

import { SetVars3 } from "/snippets/syntax-diagrams/SetVars3.jsx";
import { SetVars4 } from "/snippets/syntax-diagrams/SetVars4.jsx";

The `SET` [statement](/docs/v23.2/sql-statements) can modify one of the session configuration variables. These can also be queried via [`SHOW`](/docs/v23.2/show-vars). By default, session variable values are set for the duration of the current session.

CockroachDB supports setting session variables for the duration of a single transaction, using [the `LOCAL` keyword](#set-local).

<Note>
The `SET` statement for session variables is unrelated to the other [`SET TRANSACTION`](/docs/v23.2/set-transaction) and [`SET CLUSTER SETTING`](/docs/v23.2/cluster-settings#change-a-cluster-setting) statements.
</Note>

<Warning>
In some cases, client drivers can drop and restart the connection to the server. When this happens, any session configurations made with `SET` statements are lost. It is therefore more reliable to configure the session in the client's connection string. For examples in different languages, see the [Build an App with CockroachDB](/docs/v23.2/example-apps) tutorials.
</Warning>

## Required privileges

To set the `role` session variable, the current user must be a member of the `admin` role, or a member of the target role.

All other session variables do not require [privileges](/docs/v23.2/security-reference/authorization#managing-privileges) to modify.

## Synopsis

The `SET` statement can set a session variable for the duration of the current session ([`SET {variable}`/`SET SESSION {variable}`](#set-session)), or for the duration of a single transaction ([`SET LOCAL {variable}`](#set-local)).

### SET SESSION

<SetVars3 />

<Note>
By default, session variables are set for the duration of the current session. As a result, [`SET {variable}` and `SET SESSION {variable}`](#set-session) are equivalent.
</Note>

### SET LOCAL

<SetVars4 />

<Note>
`SET LOCAL` is compatible with [savepoints](/docs/v23.2/savepoint). Executing a [`ROLLBACK`](/docs/v23.2/rollback-transaction), `ROLLBACK TO SAVEPOINT`, or `RELEASE TO SAVEPOINT` statement rolls back any variables set by `SET LOCAL`.
</Note>

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>var&#95;name</code></td><td>The name of <a href="#supported-variables">the session variable</a> to set. The variable name is case-insensitive.</td></tr><tr><td><code>var&#95;value</code></td><td>The value, or list of values, to assign to the session variable.</td></tr></tbody></table>

### Supported variables

<table><thead><tr><th>Variable name</th><th>Description</th><th>Initial value</th><th>Modify with <a href="/docs/v23.2/set-vars"><code>SET</code></a>?</th><th>View with <a href="/docs/v23.2/show-vars"><code>SHOW</code></a>?</th></tr></thead><tbody><tr><td><a></a><code>application&#95;name</code></td><td>The current application name for statistics collection.</td><td>Empty string, or <code>cockroach</code> for sessions from the <a href="/docs/v23.2/cockroach-sql">built-in SQL client</a>.</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>bytea&#95;output</code></td><td>The <a href="/docs/v23.2/bytes#supported-conversions">mode for conversions from <code>STRING</code> to <code>BYTES</code></a>.</td><td>hex</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>client&#95;min&#95;messages</code></td><td>The severity level of notices displayed in the <a href="/docs/v23.2/cockroach-sql">SQL shell</a>. Accepted values include <code>debug5</code>, <code>debug4</code>, <code>debug3</code>, <code>debug2</code>, <code>debug1</code>, <code>log</code>, <code>notice</code>, <code>warning</code>, and <code>error</code>.</td><td><code>notice</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>copy&#95;from&#95;atomic&#95;enabled</code></td><td>If set to <code>on</code>, <a href="/docs/v23.2/copy"><code>COPY FROM</code></a> statements are committed atomically, matching PostgreSQL behavior. If set to <code>off</code>, <code>COPY FROM</code> statements are segmented into batches of 100 rows unless issued within an explicit transaction, matching the CockroachDB behavior in versions prior to v22.2.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>copy&#95;transaction&#95;quality&#95;of&#95;service</code></td><td>The default quality of service for <a href="/docs/v23.2/copy"><code>COPY</code></a> statements in the current session. The supported options are <code>regular</code>, <code>critical</code>, and <code>background</code>. See <a href="/docs/v23.2/admission-control#copy-qos">Set quality of service level</a>.</td><td><code>background</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>cost&#95;scans&#95;with&#95;default&#95;col&#95;size</code></td><td>Whether to prevent the optimizer from considering column size when costing plans.</td><td><code>false</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>crdb&#95;version</code></td><td>The version of CockroachDB.</td><td><code>CockroachDB OSS version</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>database</code></td><td>The <a href="/docs/v23.2/sql-name-resolution#current-database">current database</a>.</td><td>Database in connection string, or empty if not specified.</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>datestyle</code></td><td>The input string format for <a href="/docs/v23.2/date"><code>DATE</code></a> and <a href="/docs/v23.2/timestamp"><code>TIMESTAMP</code></a> values. Accepted values include <code>ISO,MDY</code>, <code>ISO,DMY</code>, and <code>ISO,YMD</code>.</td><td>The value set by the <code>sql.defaults.datestyle</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (<code>ISO,MDY</code>, by default).</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;int&#95;size</code></td><td>The size, in bytes, of an <a href="/docs/v23.2/int"><code>INT</code></a> type.</td><td><code>8</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;text&#95;search&#95;config</code></td><td>The dictionary used to normalize tokens and eliminate stop words when calling a <a href="/docs/v23.2/functions-and-operators#full-text-search-functions">full-text search function</a> without a configuration parameter. See <a href="/docs/v23.2/full-text-search">Full-Text Search</a>.</td><td><code>english</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;transaction&#95;isolation</code></td><td>The isolation level at which transactions in the session execute (<a href="/docs/v23.2/demo-serializable"><code>SERIALIZABLE</code></a> or <a href="/docs/v23.2/read-committed"><code>READ COMMITTED</code></a>). See <a href="/docs/v23.2/transactions#isolation-levels">Isolation levels</a>.</td><td><code>SERIALIZABLE</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;transaction&#95;priority</code></td><td>The default transaction priority for the current session. The supported options are <code>low</code>, <code>normal</code>, and <code>high</code>.</td><td><code>normal</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;transaction&#95;quality&#95;of&#95;service</code></td><td>The default transaction quality of service for the current session. The supported options are <code>regular</code>, <code>critical</code>, and <code>background</code>. See <a href="/docs/v23.2/admission-control#set-quality-of-service-level-for-a-session">Set quality of service level</a>.</td><td><code>regular</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;transaction&#95;read&#95;only</code></td><td>The default transaction access mode for the current session.<br/>If set to <code>on</code>, only read operations are allowed in transactions in the current session; if set to <code>off</code>, both read and write operations are allowed. See <a href="/docs/v23.2/set-transaction"><code>SET TRANSACTION</code></a> for more details.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;transaction&#95;use&#95;follower&#95;reads</code></td><td>If set to on, all read-only transactions use <a href="/docs/v23.2/as-of-system-time"><code>AS OF SYSTEM TIME follower&#95;read&#95;timestamp()</code></a> to allow the transaction to use follower reads.<br/>If set to <code>off</code>, read-only transactions will only use follower reads if an <code>AS OF SYSTEM TIME</code> clause is specified in the statement, with an interval of at least 4.8 seconds.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>disable&#95;changefeed&#95;replication</code></td><td>When <code>true</code>, <a href="/docs/v23.2/changefeed-messages#filtering-changefeed-messages">changefeeds</a> will not emit messages for any changes (e.g., <code>INSERT</code>, <code>UPDATE</code>) issued to watched tables during that session.</td><td><code>false</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>disallow&#95;full&#95;table&#95;scans</code></td><td>If set to <code>on</code>, queries on "large" tables with a row count greater than <a href="#large-full-scan-rows"><code>large&#95;full&#95;scan&#95;rows</code></a> will not use full table or index scans. If no other query plan is possible, queries will return an error message. This setting does not apply to internal queries, which may plan full table or index scans without checking the session variable.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>distsql</code></td><td>The query distribution mode for the session. By default, CockroachDB determines which queries are faster to execute if distributed across multiple nodes, and all other queries are run through the gateway node.</td><td><code>auto</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;auto&#95;rehoming</code></td><td>When enabled, the <a href="/docs/v23.2/alter-table#crdb_region">home regions</a> of rows in <a href="/docs/v23.2/alter-table#set-the-table-locality-to-regional-by-row"><code>REGIONAL BY ROW</code></a> tables are automatically set to the region of the <a href="/docs/v23.2/ui-sessions-page#session-details-gateway-node">gateway node</a> from which any <a href="/docs/v23.2/update"><code>UPDATE</code></a> or <a href="/docs/v23.2/upsert"><code>UPSERT</code></a> statements that operate on those rows originate.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;create&#95;stats&#95;using&#95;extremes</code></td><td>If <code>on</code>, allows manual creation of partial statistics using the <a href="/docs/v23.2/create-statistics#create-partial-statistics-using-extremes"><code>CREATE STATISTICS ... USING EXTREMES</code></a> syntax.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;durable&#95;locking&#95;for&#95;serializable</code></td><td>Indicates whether CockroachDB replicates <a href="/docs/v23.2/select-for-update#lock-strengths"><code>FOR UPDATE</code> and <code>FOR SHARE</code></a> locks via <a href="/docs/v23.2/architecture/replication-layer#raft">Raft</a>, allowing locks to be preserved when leases are transferred. Note that replicating <code>FOR UPDATE</code> and <code>FOR SHARE</code> locks will add latency to those statements. This setting only affects <code>SERIALIZABLE</code> transactions and matches the default <code>READ COMMITTED</code> behavior when enabled.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;experimental&#95;alter&#95;column&#95;type&#95;general</code></td><td>If <code>on</code>, it is possible to <a href="/docs/v23.2/alter-table#alter-column-data-types">alter column data types</a>.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;implicit&#95;fk&#95;locking&#95;for&#95;serializable</code></td><td>Indicates whether CockroachDB uses <a href="/docs/v23.2/select-for-update#lock-strengths">shared locks</a> to perform <a href="/docs/v23.2/foreign-key">foreign key</a> checks. To take effect, the <a href="#enable-shared-locking-for-serializable"><code>enable&#95;shared&#95;locking&#95;for&#95;serializable</code></a> setting must also be enabled. This setting only affects <code>SERIALIZABLE</code> transactions and matches the default <code>READ COMMITTED</code> behavior when enabled.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;implicit&#95;select&#95;for&#95;update</code></td><td>Indicates whether <a href="/docs/v23.2/update"><code>UPDATE</code></a> and <a href="/docs/v23.2/upsert"><code>UPSERT</code></a> statements acquire locks using the <code>FOR UPDATE</code> locking mode during their initial row scan, which improves performance for contended workloads.<br/><br/>For more information about how <code>FOR UPDATE</code> locking works, see the documentation for <a href="/docs/v23.2/select-for-update"><code>SELECT FOR UPDATE</code></a>.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;implicit&#95;transaction&#95;for&#95;batch&#95;statements</code></td><td>Indicates whether multiple statements in a single query (a "batch statement") will all run in the same implicit transaction, which matches the PostgreSQL wire protocol.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;insert&#95;fast&#95;path</code></td><td>Indicates whether CockroachDB will use a specialized execution operator for inserting into a table. We recommend leaving this setting <code>on</code>.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;shared&#95;locking&#95;for&#95;serializable</code></td><td>Indicates whether <a href="/docs/v23.2/select-for-update#lock-strengths">shared locks</a> are enabled for <code>SERIALIZABLE</code> transactions. When <code>off</code>, <code>SELECT</code> statements using <code>FOR SHARE</code> are still permitted under <code>SERIALIZABLE</code> isolation, but silently do not lock.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;super&#95;regions</code></td><td>When enabled, you can define a super region: a set of <a href="/docs/v23.2/multiregion-overview#super-regions">database regions</a> on a multi-region cluster such that your <a href="/docs/v23.2/schema-design-overview#database-schema-objects">schema objects</a> will have all of their <a href="/docs/v23.2/architecture/overview#architecture-replica">replicas</a> stored <em>only</em> in regions that are members of the super region.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;zigzag&#95;join</code></td><td>Indicates whether the <a href="/docs/v23.2/cost-based-optimizer">cost-based optimizer</a> will plan certain queries using a <a href="/docs/v23.2/cost-based-optimizer#zigzag-joins">zigzag merge join algorithm</a>, which searches for the desired intersection by jumping back and forth between the indexes based on the fact that after constraining indexes, they share an ordering.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enforce&#95;home&#95;region</code></td><td>If set to <code>on</code>, queries return an error and in some cases a suggested resolution if they cannot run entirely in their home region. This can occur if a query has no home region (for example, if it reads from different home regions in a <a href="/docs/v23.2/table-localities#regional-by-row-tables">regional by row table</a>) or a query's home region differs from the <a href="/docs/v23.2/architecture/life-of-a-distributed-transaction#gateway">gateway</a> region. Note that only tables with <code>ZONE</code><a href="/docs/v23.2/multiregion-survival-goals#when-to-use-zone-vs-region-survival-goals">survivability</a> can be scanned without error when this is enabled. For more information about home regions, see <a href="/docs/v23.2/multiregion-overview#table-localities">Table localities</a>.<br/><br/>This feature is in preview. It is subject to change.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enforce&#95;home&#95;region&#95;follower&#95;reads&#95;enabled</code></td><td>If <code>on</code> while the <a href="/docs/v23.2/cost-based-optimizer#control-whether-queries-are-limited-to-a-single-region"><code>enforce&#95;home&#95;region</code></a> setting is <code>on</code>, allows <code>enforce&#95;home&#95;region</code> to perform <code>AS OF SYSTEM TIME</code><a href="/docs/v23.2/follower-reads">follower reads</a> to detect and report a query's <a href="/docs/v23.2/multiregion-overview#table-localities">home region</a>, if any.<br/><br/>This feature is in preview. It is subject to change.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>expect&#95;and&#95;ignore&#95;not&#95;visible&#95;columns&#95;in&#95;copy</code></td><td>If <code>on</code>, <a href="/docs/v23.2/copy"><code>COPY FROM</code></a> with no column specifiers will assume that hidden columns are in the copy data, but will ignore them when applying <code>COPY FROM</code>.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>extra&#95;float&#95;digits</code></td><td>The number of digits displayed for floating-point values. Only values between <code>-15</code> and <code>3</code> are supported.</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>force&#95;savepoint&#95;restart</code></td><td>When set to <code>true</code>, allows the <a href="/docs/v23.2/savepoint"><code>SAVEPOINT</code></a> statement to accept any name for a savepoint.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>foreign&#95;key&#95;cascades&#95;limit</code></td><td>Limits the number of <a href="/docs/v23.2/foreign-key#use-a-foreign-key-constraint-with-cascade">cascading operations</a> that run as part of a single query.</td><td><code>10000</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>idle&#95;in&#95;session&#95;timeout</code></td><td>Automatically terminates sessions that idle past the specified threshold.<br/><br/>When set to <code>0</code>, the session will not timeout.</td><td>The value set by the <code>sql.defaults.idle&#95;in&#95;session&#95;timeout</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (<code>0s</code>, by default).</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>idle&#95;in&#95;transaction&#95;session&#95;timeout</code></td><td>Automatically terminates sessions that are idle in a transaction past the specified threshold.<br/><br/>When set to <code>0</code>, the session will not timeout.</td><td>The value set by the <code>sql.defaults.idle&#95;in&#95;transaction&#95;session&#95;timeout</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (0s, by default).</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>index&#95;recommendations&#95;enabled</code></td><td>If <code>true</code>, display recommendations to create indexes required to eliminate full table scans.<br/>For more details, see <a href="/docs/v23.2/explain#default-statement-plans">Default statement plans</a>.</td><td><code>true</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>inject&#95;retry&#95;errors&#95;enabled</code></td><td>If <code>true</code>, any statement executed inside of an explicit transaction (with the exception of <a href="/docs/v23.2/set-vars"><code>SET</code></a> statements) will return a transaction retry error. If the client retries the transaction using the special <a href="/docs/v23.2/savepoint#savepoints-for-client-side-transaction-retries"><code>cockroach&#95;restart SAVEPOINT</code> name</a>, after the 3rd retry error, the transaction will proceed as normal. Otherwise, the errors will continue until <code>inject&#95;retry&#95;errors&#95;enabled</code> is set to <code>false</code>. For more details, see <a href="/docs/v23.2/transaction-retry-error-example#test-transaction-retry-logic">Test transaction retry logic</a>.</td><td><code>false</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>intervalstyle</code></td><td>The input string format for <a href="/docs/v23.2/interval"><code>INTERVAL</code></a> values. Accepted values include <code>postgres</code>, <code>iso&#95;8601</code>, and <code>sql&#95;standard</code>.</td><td>The value set by the <code>sql.defaults.intervalstyle</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (<code>postgres</code>, by default).</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>is&#95;superuser</code></td><td>If <code>on</code> or <code>true</code>, the current user is a member of the <a href="/docs/v23.2/security-reference/authorization#admin-role"><code>admin</code> role</a>.</td><td>User-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>large&#95;full&#95;scan&#95;rows</code></td><td>Determines which tables are considered "large" such that <code>disallow&#95;full&#95;table&#95;scans</code> prevents queries from performing full table or index scans on those tables. The default value is <code>1000</code>. To prevent all full table or index scans, set to <code>0</code>.</td><td>User-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>legacy&#95;varchar&#95;typing</code></td><td><strong>New in v23.2.18:</strong> If <code>on</code>, type checking and overload resolution for <a href="/docs/v23.2/string#related-types"><code>VARCHAR</code></a> types ignore overloads that cause errors, allowing comparisons between <code>VARCHAR</code> and non-<code>STRING</code>-like placeholder values to execute successfully. If <code>off</code>, type checking of these comparisons is more strict and must be handled with explicit type casts.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>locality</code></td><td>The location of the node.<br/>For more information, see <a href="/docs/v23.2/cockroach-start#locality">Locality</a>.</td><td>Node-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>lock&#95;timeout</code></td><td>The amount of time a query can spend acquiring or waiting for a single <a href="/docs/v23.2/architecture/transaction-layer#concurrency-control">row-level lock</a>.<br/>In CockroachDB, unlike in PostgreSQL, non-locking reads wait for conflicting locks to be released. As a result, the <code>lock&#95;timeout</code> configuration applies to writes, and to locking and non-locking reads in read-write and read-only transactions.<br/>If <code>lock&#95;timeout = 0</code>, queries do not timeout due to lock acquisitions.</td><td>The value set by the <code>sql.defaults.lock&#95;timeout</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (<code>0</code>, by default)</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>multiple&#95;active&#95;portals&#95;enabled</code></td><td>Whether to enable the <a href="/docs/v23.2/postgresql-compatibility#multiple-active-portals">multiple active portals</a> pgwire feature.</td><td><code>false</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>node&#95;id</code></td><td>The ID of the node currently connected to.<br/><br/>This variable is particularly useful for verifying load balanced connections.</td><td>Node-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>null&#95;ordered&#95;last</code></td><td>Set the default ordering of <code>NULL</code>s. The default order is <code>NULL</code>s first for ascending order and <code>NULL</code>s last for descending order.</td><td><code>false</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;push&#95;offset&#95;into&#95;index&#95;join</code></td><td>If <code>on</code>, the optimizer will attempt to push offset expressions into index join expressions to produce more efficient query plans.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;forecasts</code></td><td>If <code>on</code>, the optimizer uses forecasted statistics for query planning.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;histograms</code></td><td>If <code>on</code>, the optimizer uses collected histograms for cardinality estimation.</td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;improved&#95;multi&#95;column&#95;selectivity&#95;estimate</code></td><td>If <code>on</code>, the optimizer uses an improved selectivity estimate for multi-column predicates.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;improved&#95;zigzag&#95;join&#95;costing</code></td><td>If <code>on</code>, the cost of <a href="/docs/v23.2/cost-based-optimizer#zigzag-joins">zigzag joins</a> is updated so they will be never be chosen over scans unless they produce fewer rows. To take effect, the <a href="#enable-zigzag-join"><code>enable&#95;zigzag&#95;join</code></a> setting must also be enabled.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;lock&#95;op&#95;for&#95;serializable</code></td><td>If <code>on</code>, the optimizer uses a <code>Lock</code> operator to construct query plans for <code>SELECT</code> statements using the <a href="/docs/v23.2/select-for-update"><code>FOR UPDATE</code> and <code>FOR SHARE</code></a> clauses. This setting only affects <code>SERIALIZABLE</code> transactions. <code>READ COMMITTED</code> transactions are evaluated with the <code>Lock</code> operator regardless of the setting.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;multicol&#95;stats</code></td><td>If <code>on</code>, the optimizer uses collected multi-column statistics for cardinality estimation.</td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>optimizer&#95;use&#95;not&#95;visible&#95;indexes</code></td><td>If <code>on</code>, the optimizer uses not visible indexes for planning.</td><td><code>off</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>pg&#95;trgm.similarity&#95;threshold</code></td><td>The threshold above which a <a href="/docs/v23.2/functions-and-operators#operators"><code>%</code></a> string comparison returns <code>true</code>. The value must be between <code>0</code> and <code>1</code>. For more information, see <a href="/docs/v23.2/trigram-indexes">Trigram Indexes</a>.</td><td><code>0.3</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>plan&#95;cache&#95;mode</code></td><td>The type of plan that is cached in the <a href="/docs/v23.2/cost-based-optimizer#query-plan-cache">query plan cache</a>: <code>auto</code>, <code>force&#95;generic&#95;plan</code>, or <code>force&#95;custom&#95;plan</code>.<br/><br/>For more information, refer to <a href="/docs/v23.2/cost-based-optimizer#query-plan-type">Query plan type</a>.</td><td><code>force&#95;custom&#95;plan</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>prefer&#95;lookup&#95;joins&#95;for&#95;fks</code></td><td>If <code>on</code>, the optimizer prefers <a href="/docs/v23.2/joins#lookup-joins"><code>lookup joins</code></a> to <a href="/docs/v23.2/joins#merge-joins"><code>merge joins</code></a> when performing <a href="/docs/v23.2/foreign-key"><code>foreign key</code></a> checks.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>reorder&#95;joins&#95;limit</code></td><td>Maximum number of joins that the optimizer will attempt to reorder when searching for an optimal query execution plan.<br/><br/>For more information, see <a href="/docs/v23.2/cost-based-optimizer#join-reordering">Join reordering</a>.</td><td><code>8</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>require&#95;explicit&#95;primary&#95;keys</code></td><td>If <code>on</code>, CockroachDB throws an error for all tables created without an explicit primary key defined.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>search&#95;path</code></td><td>A list of schemas that will be searched to resolve unqualified table or function names.<br/>For more details, see <a href="/docs/v23.2/sql-name-resolution">SQL name resolution</a>.</td><td><code>public</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>serial&#95;normalization</code></td><td>Specifies the default handling of <a href="/docs/v23.2/serial"><code>SERIAL</code></a> in table definitions. Valid options include <code>'rowid'</code>, <code>'virtual&#95;sequence'</code>, <code>sql&#95;sequence</code>, <code>sql&#95;sequence&#95;cached</code>, and <code>unordered&#95;rowid</code>.<br/>If set to <code>'virtual&#95;sequence'</code>, the <code>SERIAL</code> type auto-creates a sequence for <a href="https://forum.cockroachlabs.com/t/hibernate-sequence-generator-returns-negative-number-and-ignore-unique-rowid/1885">better compatibility with Hibernate sequences</a>.<br/>If set to <code>sql&#95;sequence&#95;cached</code>, you can use the <code>sql.defaults.serial&#95;sequences&#95;cache&#95;size</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> to control the number of values to cache in a user's session, with a default of 256.<br/>If set to <code>unordered&#95;rowid</code>, the <code>SERIAL</code> type generates a globally unique 64-bit integer (a combination of the insert timestamp and the ID of the node executing the statement) that does not have unique ordering.</td><td><code>'rowid'</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>server&#95;version</code></td><td>The version of PostgreSQL that CockroachDB emulates.</td><td>Version-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>server&#95;version&#95;num</code></td><td>The version of PostgreSQL that CockroachDB emulates.</td><td>Version-dependent</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>session&#95;id</code></td><td>The ID of the current session.</td><td>Session-dependent</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>session&#95;user</code></td><td>The user connected for the current session.</td><td>User in connection string</td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>sql&#95;safe&#95;updates</code></td><td>If <code>false</code>, potentially unsafe SQL statements are allowed, including <code>DROP</code> of a non-empty database and all dependent objects, <a href="/docs/v23.2/delete"><code>DELETE</code></a> without a <code>WHERE</code> clause, <a href="/docs/v23.2/update"><code>UPDATE</code></a> without a <code>WHERE</code> clause, and <a href="/docs/v23.2/alter-table#drop-column"><code>ALTER TABLE .. DROP COLUMN</code></a>.<br/>See <a href="/docs/v23.2/cockroach-sql#allow-potentially-unsafe-sql-statements">Allow Potentially Unsafe SQL Statements</a> for more details.</td><td><code>true</code> for interactive sessions from the <a href="/docs/v23.2/cockroach-sql">built-in SQL client</a>,<br/><code>false</code> for sessions from other clients</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>statement&#95;timeout</code></td><td>The amount of time a statement can run before being stopped.<br/>This value can be an <code>int</code> (e.g., <code>10</code>) and will be interpreted as milliseconds. It can also be an interval or string argument, where the string can be parsed as a valid interval (e.g., <code>'4s'</code>).<br/>A value of <code>0</code> turns it off.</td><td>The value set by the <code>sql.defaults.statement&#95;timeout</code><a href="/docs/v23.2/cluster-settings">cluster setting</a> (<code>0s</code>, by default).</td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>stub&#95;catalog&#95;tables</code></td><td>If <code>off</code>, querying an unimplemented, empty <a href="/docs/v23.2/pg-catalog"><code>pg&#95;catalog</code></a> table will result in an error, as is the case in v20.2 and earlier. If <code>on</code>, querying an unimplemented, empty <code>pg&#95;catalog</code> table simply returns no rows.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>timezone</code></td><td>The default time zone for the current session. This session variable was named <code>"time zone"</code> (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL.</td><td><code>UTC</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>tracing</code></td><td>The trace recording state.</td><td><code>off</code></td><td></td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;isolation</code></td><td>The isolation level at which the transaction executes (<a href="/docs/v23.2/demo-serializable"><code>SERIALIZABLE</code></a> or <a href="/docs/v23.2/read-committed"><code>READ COMMITTED</code></a>). See <a href="/docs/v23.2/transactions#isolation-levels">Isolation levels</a>.</td><td><code>SERIALIZABLE</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;priority</code></td><td>The priority of the current transaction. See Transactions: Transaction priorities for more details. This session variable was called transaction priority (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL.</td><td><code>NORMAL</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;read&#95;only</code></td><td>The access mode of the current transaction. See <a href="/docs/v23.2/set-transaction"><code>SET TRANSACTION</code></a> for more details.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;rows&#95;read&#95;err</code></td><td>The limit for the number of rows read by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to <code>SQL&#95;INTERNAL&#95;PERF</code> for internal transactions).</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;rows&#95;read&#95;log</code></td><td>The threshold for the number of rows read by a SQL transaction. If this value is exceeded, the event will be logged to <code>SQL&#95;PERF</code> (or <code>SQL&#95;INTERNAL&#95;PERF</code> for internal transactions).</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;rows&#95;written&#95;err</code></td><td>The limit for the number of rows written by a SQL transaction. If this value is exceeded the transaction will fail (or the event will be logged to <code>SQL&#95;INTERNAL&#95;PERF</code> for internal transactions).</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;rows&#95;written&#95;log</code></td><td>The threshold for the number of rows written by a SQL transaction. If this value is exceeded, the event will be logged to <code>SQL&#95;PERF</code> (or <code>SQL&#95;INTERNAL&#95;PERF</code> for internal transactions).</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;status</code></td><td>The state of the current transaction. See <a href="/docs/v23.2/transactions">Transactions</a> for more details. This session variable was called <code>transaction status</code> (with a space) in CockroachDB 1.x. It has been renamed for compatibility with PostgreSQL.</td><td><code>NoTxn</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>transaction&#95;timeout</code></td><td>Aborts an explicit <a href="/docs/v23.2/transactions">transaction</a> when it runs longer than the configured duration. Stored in milliseconds; can be expressed in milliseconds or as an <a href="/docs/v23.2/interval"><code>INTERVAL</code></a>.</td><td><code>0</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>troubleshooting&#95;mode&#95;enabled</code></td><td>When enabled, avoid performing additional work on queries, such as collecting and emitting telemetry data. This session variable is particularly useful when the cluster is experiencing issues, unavailability, or failure.</td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>use&#95;declarative&#95;schema&#95;changer</code></td><td>Whether to use the declarative schema changer for supported statements.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>vectorize</code></td><td>The vectorized execution engine mode. Options include <code>on</code> and <code>off</code>. For more details, see <a href="/docs/v23.2/vectorized-execution#configure-vectorized-execution">Configure vectorized execution for CockroachDB</a>.</td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>virtual&#95;cluster&#95;name</code></td><td>The name of the virtual cluster that the SQL client is connected to.</td><td>Session-dependent</td><td>No</td><td>Yes</td></tr></tbody></table>

The following session variables are exposed only for backwards compatibility with earlier CockroachDB releases and have no impact on how CockroachDB runs:

<table><thead><tr><th>Variable name</th><th>Initial value</th><th>Modify with <a href="/docs/v23.2/set-vars"><code>SET</code></a>?</th><th>View with <a href="/docs/v23.2/show-vars"><code>SHOW</code></a>?</th></tr></thead><tbody><tr><td><a></a><code>backslash&#95;quote</code></td><td><code>safe&#95;encoding</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>client&#95;encoding</code></td><td><code>UTF8</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>default&#95;tablespace</code></td><td></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;drop&#95;enum&#95;value</code></td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>enable&#95;seqscan</code></td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>escape&#95;string&#95;warning</code></td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>experimental&#95;enable&#95;hash&#95;sharded&#95;indexes</code></td><td><code>off</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>integer&#95;datetimes</code></td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>max&#95;identifier&#95;length</code></td><td><code>128</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>max&#95;index&#95;keys</code></td><td><code>32</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>row&#95;security</code></td><td><code>off</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>standard&#95;conforming&#95;strings</code></td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>server&#95;encoding</code></td><td><code>UTF8</code></td><td>Yes</td><td>Yes</td></tr><tr><td><a></a><code>synchronize&#95;seqscans</code></td><td><code>on</code></td><td>No</td><td>Yes</td></tr><tr><td><a></a><code>synchronous&#95;commit</code></td><td><code>on</code></td><td>Yes</td><td>Yes</td></tr></tbody></table>

### Special syntax cases

CockroachDB supports the following syntax cases, for compatibility with common SQL syntax patterns:

<table><thead><tr><th>Syntax</th><th>Equivalent to</th><th>Notes</th></tr></thead><tbody><tr><td><code>USE ...</code></td><td><code>SET database = ...</code></td><td>This is provided as convenience for users with a MySQL/MSSQL background.</td></tr><tr><td><code>SET NAMES ...</code></td><td><code>SET client&#95;encoding = ...</code></td><td>This is provided for compatibility with PostgreSQL clients.</td></tr><tr><td><code>SET ROLE &lt;role&gt;</code></td><td><code>SET role = &lt;role&gt;</code></td><td>This is provided for compatibility with PostgreSQL clients.</td></tr><tr><td><code>RESET ROLE</code></td><td><code>SET role = 'none'</code>/<code>SET role = current&#95;user()</code></td><td>This is provided for compatibility with PostgreSQL clients.</td></tr><tr><td><code>SET SCHEMA &lt;name&gt;</code></td><td><code>SET search&#95;path = &lt;name&gt;</code></td><td>This is provided for better compatibility with PostgreSQL.</td></tr><tr><td><code>SET SESSION CHARACTERISTICS AS TRANSACTION ISOLATION LEVEL ...</code></td><td><code>SET default&#95;transaction&#95;isolation = ...</code></td><td>This is provided for compatibility with standard SQL.</td></tr><tr><td><code>SET TIME ZONE ...</code></td><td><code>SET timezone = ...</code></td><td>This is provided for compatibility with PostgreSQL clients.</td></tr></tbody></table>

## Examples

### Set simple variables

The following examples demonstrate how to use `SET` to configure the default database for the current session:

```sql
SET application_name = movr_app;
```

```sql
SHOW application_name;
```

```text
  application_name
--------------------
  movr_app
(1 row)
```

### Set variables to values containing spaces

The following demonstrates how to use quoting to use values containing spaces:

```sql
SET application_name = "movr app";
```

```sql
SHOW application_name;
```

```text
  application_name
--------------------
  movr app
(1 row)
```

### Set variables to a list of values

The following demonstrates how to assign a list of values:

```sql
SET search_path = pg_catalog,public;
```

```sql
SHOW search_path;
```

```text
     search_path
----------------------
  pg_catalog, public
(1 row)
```

### Reset a variable to its default value

<Tip>
You can use [`RESET`](/docs/v23.2/reset-vars) to reset a session variable as well.
</Tip>

```sql
SHOW search_path;
```

```text
     search_path
----------------------
  pg_catalog, public
(1 row)
```

```sql
SET search_path = DEFAULT;
```

```sql
SHOW search_path;
```

```text
    search_path
-------------------
  "$user", public
(1 row)
```

### Set a variable for the duration of a single transaction

To set a variable for the duration of a single transaction, use the `SET LOCAL` statement.

```sql
SHOW application_name;
```

```text
  application_name
--------------------
  movr app
(1 row)
```

```sql
BEGIN;
SET LOCAL application_name = demo;
SHOW application_name;
```

```text
  application_name
--------------------
  demo
(1 row)
```

```sql
COMMIT;
SHOW application_name;
```

```text
  application_name
--------------------
  movr app
(1 row)
```

### Roll back session variables set for a transaction

You can roll back session variable settings to [savepoints](/docs/v23.2/savepoint).

```sql
SHOW timezone;
```

```text
  timezone
------------
  UTC
(1 row)
```

```sql
BEGIN;
SET timezone = '+3';
SAVEPOINT s1;
SHOW timezone;
```

```text
  timezone
------------
  +3
(1 row)
```

```sql
SET LOCAL timezone = '+1';
SHOW timezone;
```

```text
  timezone
------------
  +1
(1 row)
```

```sql
ROLLBACK TO SAVEPOINT s1;
SHOW timezone;
```

```text
  timezone
------------
  +3
(1 row)
```

```sql
COMMIT;
SHOW timezone;
```

```text
  timezone
------------
  +3
(1 row)
```

### Assume another role

To assume another [role](/docs/v23.2/security-reference/authorization#roles) for the duration of a session, use `SET ROLE <role>`. `SET ROLE <role>` is equivalent to `SET role = <role>`.

<Note>
To assume a new role, the current user must be a member of the `admin` role, or a member of the target role.
</Note>

```sql
SHOW role;
```

```text
  role
--------
  root
(1 row)
```

```sql
CREATE ROLE new_role;
SHOW ROLES;
```

```text
  username | options | member_of
-----------+---------+------------
  admin    |         | {}
  new_role | NOLOGIN | {}
  root     |         | {admin}
(3 rows)
```

```sql
SET ROLE new_role;
SHOW role;
```

```text
    role
------------
  new_role
(1 row)
```

To reset the role of the current user, use a [`RESET`](/docs/v23.2/reset-vars) statement. `RESET ROLE` is equivalent to `SET role = 'none'` and `SET role = current_user()`.

```sql
RESET ROLE;
SHOW role;
```

```text
  role
--------
  root
(1 row)
```

To assume a role for the duration of a single transaction, use `SET LOCAL ROLE`.

```sql
BEGIN;
SET LOCAL ROLE new_role;
SHOW role;
```

```text
    role
------------
  new_role
(1 row)
```

```sql
COMMIT;
SHOW role;
```

```text
  role
--------
  root
(1 row)
```

## `SET TIME ZONE`

<Warning>
As a best practice, we recommend not using this setting and avoid setting a session time for your database. We instead recommend converting UTC values to the appropriate time zone on the client side.
</Warning>

You can control the default time zone for a session with `SET TIME ZONE`. This will apply an offset to all [`TIMESTAMPTZ`/`TIMESTAMP WITH TIME ZONE`](/docs/v23.2/timestamp) and [`TIMETZ`/`TIME WITH TIME ZONE`](/docs/v23.2/time) values in the session. By default, CockroachDB uses UTC as the time zone for `SET TIME ZONE` offsets.

### Parameters

The input passed to `SET TIME ZONE` indicates the time zone for the current session. This value can be a string representation of a local system-defined time zone (e.g., `'EST'`, `'America/New_York'`) or a positive or negative numeric offset from UTC (e.g., `-7`, `+7`, or `UTC-7`, `UTC+7`) or GMT (e.g., `GMT-7`, `GMT+7`). The numeric offset input can also be colon-delimited (e.g., `-7:00`, `GMT+7:00`).

When setting a time zone, note the following:

- Timezone abbreviations are case-insensitive.
- To see a list of supported timezones, their nicknames, and their offsets, run the following query:

```sql
  SELECT * FROM pg_timezone_names;
```

- `DEFAULT`, `LOCAL`, or `0` sets the session time zone to `UTC`.
- Only offsets specified by integers (e.g., `-7`, `7`) use the [ISO 8601 time offset](https://wikipedia.org/wiki/ISO_8601#Time_offsets_from_UTC) (i.e., the offset input is parsed as hours *east* of UTC). If you explicitly specify `UTC` or `GMT` for the time zone offset (e.g., `UTC-7`,`GMT+7`), or if the numeric input is colon-delimited (e.g., `-7:00`, `GMT+7:00`), CockroachDB uses the [POSIX time offset](https://www.postgresql.org/docs/current/datetime-posix-timezone-specs) instead (i.e., hours *west* of the specified time zone). This means that specifying an offset of `-7` (i.e., -7 *east* of UTC) is equivalent to specifying `GMT+7` (i.e., 7 *west* of UTC).

### Example: Set the default time zone via `SET TIME ZONE`

```sql
> SET TIME ZONE 'EST'; -- same as SET "timezone" = 'EST'
```

```sql
> SHOW TIME ZONE;
```

```text
  timezone
+----------+
  EST
(1 row)
```

```sql
> SET TIME ZONE DEFAULT; -- same as SET "timezone" = DEFAULT
```

```sql
> SHOW TIME ZONE;
```

```text
  timezone
+----------+
  UTC
(1 row)
```

## `SET TRACING`

`SET TRACING` changes the trace recording state of the current session. A trace recording can be inspected with the [`SHOW TRACE FOR SESSION`](/docs/v23.2/show-trace) statement.

<table><thead><tr><th>Value</th><th>Description</th></tr></thead><tbody><tr><td><code>off</code></td><td>Trace recording is disabled.</td></tr><tr><td><code>cluster</code></td><td>Trace recording is enabled; distributed traces are collected.</td></tr><tr><td><code>on</code></td><td>Same as <code>cluster</code>.</td></tr><tr><td><code>kv</code></td><td>Same as <code>cluster</code> except that "kv messages" are collected instead of regular trace messages. See <a href="/docs/v23.2/show-trace"><code>SHOW TRACE FOR SESSION</code></a>.</td></tr><tr><td><code>results</code></td><td>Result rows and row counts are copied to the session trace. This must be specified in order for the output of a query to be printed in the session trace.<br/><br/>Example: <code>SET tracing = kv, results;</code></td></tr></tbody></table>

## Known Limitations

`SET` does not properly apply [`ROLLBACK`](/docs/v23.2/rollback-transaction) within a transaction. For example, in the following transaction, showing the `TIME ZONE` [variable](/docs/v23.2/set-vars#supported-variables) does not return `2` as expected after the rollback:

```sql
SET TIME ZONE +2;
BEGIN;
SET TIME ZONE +3;
ROLLBACK;
SHOW TIME ZONE;
```

```sql
timezone
------------
3
```

[Tracking GitHub Issue](https://github.com/cockroachdb/cockroach/issues/69396)

## See also

- [`RESET`](/docs/v23.2/reset-vars)
- [`SET TRANSACTION`](/docs/v23.2/set-transaction)
- [`SET CLUSTER SETTING`](/docs/v23.2/set-cluster-setting)
- [`SHOW {session variable}`](/docs/v23.2/show-vars)
- [The `TIMESTAMP` and `TIMESTAMPTZ` data types.](/docs/v23.2/timestamp)
- [`SHOW TRACE FOR SESSION`](/docs/v23.2/show-trace)
- [`pg_catalog`](/docs/v23.2/pg-catalog)
